[package]
name = "colorous"
version = "1.0.10" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["graphics", "no-std"]
description = "Professional color schemes ported from d3-scale-chromatic"
documentation = "https://docs.rs/colorous"
edition = "2018"
keywords = ["color", "gradient"]
license = "Apache-2.0"
repository = "https://github.com/dtolnay/colorous"
rust-version = "1.32"

[dev-dependencies]
dejavu = "=2.37.0"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

[features]
default = ["std"]
std = []

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
