[package]
name = "colorous"
version = "1.0.14"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["graphics", "no-std", "no-std::no-alloc"]
description = "Professional color schemes ported from d3-scale-chromatic"
documentation = "https://docs.rs/colorous"
edition = "2018"
keywords = ["color", "gradient"]
license = "Apache-2.0"
repository = "https://github.com/dtolnay/colorous"
rust-version = "1.60"

[dev-dependencies]
ab_glyph = "0.2"
dejavu = "=2.37.0"
image = "0.25"
imageproc = "0.24"

[features]
default = ["std"]
std = []

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
